[package]
name = "indurs"
version = "0.1.0"
authors = ["Christopher James Halse Rogers <raof@ubuntu.com>"]
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
arrayref = "^0.3.4"

[dev-dependencies]
proptest = "^0.3.1"
criterion = "^0.2.11"
itertools = "^0.7.2"

[[bench]]
name = "delta_compression"
harness = false
